--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>&#9055; JcNcream</title>
+  <title>&#9055; Jasmin Marie Christie</title>
 </head>
 
 <body>
@@ -33,7 +33,6 @@
     <ul>
       <li><a href="https://www.camarillohigh.us/">Camarillo Adolfo High School</a></li>
       <li>Oxnard College</li>
-      <li>Victory Education Training Insitute</li>
       <li><a href="google.com">Devry University</a></li>
       <br>
     </ul>
@@ -55,6 +54,10 @@
           <td>2012-2015</td>
           <td>Sears</td>
         </tr>
+        <tr>
+          <td>2015-2021</td>
+          <td>Jc Computer and Technology Solutions</td>
+        </tr>
       </tbody>
 
     </table>
@@ -71,6 +74,8 @@
                 <td>Illustrator</td>
                 <td>🍓🍓🍓</td>
               </tr>
+    </table>
+            <table>
               <tr>
                 <td>Graphic Design</td>
                 <td>🍓🍓🍓</td>
@@ -79,8 +84,7 @@
                 <td>Web Design</td>
                 <td>🍓🍓🍓🍓</td>
               </tr>
-            </table></td>
-      </tr>
+    
     </table>
 
       <hr>
