--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
                 <td>Illustrator</td>
                 <td>🍓🍓🍓</td>
               </tr>
-    </table>
             <table>
               <tr>
                 <td>Graphic Design</td>
-                <td>🍓🍓🍓</td>
-              </tr>
-              <tr>
-                <td>Web Design</td>
                 <td>🍓🍓🍓🍓</td>
               </tr>
+              <tr>
+                <td>Web Development</td>
+                <td>🍓🍓🍓🍓🍓</td>
+              </tr>
+            </table>
     
     </table>
 
