--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <tr>
         <td><img src="images/jesuscircle.jpg" alt="Jesus Christ" /></td>
         <td>
-          <h1>Jasmin Christie</h1>
+          <h1>Jasmin Marie Christie</h1>
           <p><em>Technique, skill and <strong>passion</strong> blended into one beautiful package.</em></p>
           <p>
             Born and raised in sunny Southern California, found myself at a young age always fascinated<br>
@@ -37,55 +37,39 @@
       <br>
     </ul>
     <hr>
-    <h3>Work Experience</h3>
-    <table cellspacing="20">
-      <thead>
-        <tr>
-          <th>Dates</th>
-          <th>Work</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2010-2012</td>
-          <td>Pantoja Truckline Inc.</td>
-        </tr>
-        <tr>
-          <td>2012-2015</td>
-          <td>Sears</td>
-        </tr>
-        <tr>
-          <td>2015-2021</td>
-          <td>Jc Computer and Technology Solutions</td>
-        </tr>
-      </tbody>
-
-    </table>
-    <hr>
     <h3>Skillset</h3>
+    <table>
+      <tr>
+        <td>
           <table cellspacing="20">
-
-              <tr>
-                <td>Photoshop</td>
-                <td>🍓🍓🍓🍓🍓</td>
-
-              </tr>
-              <tr>
-                <td>Illustrator</td>
-                <td>🍓🍓🍓</td>
-              </tr>
-            <table>
-              <tr>
-                <td>Graphic Design</td>
-                <td>🍓🍓🍓🍓</td>
-              </tr>
-              <tr>
-                <td>Web Development</td>
-                <td>🍓🍓🍓🍓🍓</td>
-              </tr>
-            </table>
-    
+            <tr>
+              <td>Photoshop</td>
+              <td>🍓🍓🍓🍓🍓</td>
+            </tr>
+            <tr>
+              <td>Illustrator</td>
+              <td>🍓🍓🍓</td>
+            </tr>
+          </table>
+        </td>
+        <td>
+          <table cellspacing="20">
+          <tr>
+            <td>Graphic Design</td>
+            <td>🍓🍓🍓🍓</td>
+          </tr>
+          <tr>
+            <td>Web Development</td>
+            <td>🍓🍓🍓🍓🍓</td>
+          </tr>
+        </table>
+      </td>
+      </tr>
     </table>
+
+
+
+
 
       <hr>
 
