--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
 
   <center>
-    <table cellspacing="15">
+    <table cellspacing="7">
       <tr>
         <td><img src="images/jesuscircle.jpg" alt="Jesus Christ" /></td>
         <td>
           <h1>Jasmin Marie Christie</h1>
           <p><em>Technique, skill and <strong>passion</strong> blended into one beautiful package.</em></p>
           <p>
-            Born and raised in sunny Southern California, found myself at a young age always fascinated<br>
-            with technology. Endless possibilities proposed to me seemed limitless, time <br>
-            advanced and i found that to be quite true. The ability to create art, function, movement <br>
+            Born and raised in sunny Southern California, I found myself at a young age always fascinated<br>
+            with technology. The endless possibilities proposed to me by it seemed limitless, as time <br>
+            advanced and i found that to be true. The ability to create art, function, movement <br>
             and even forms of amusement from pretty much nothing was as close to magic I belived I'd ever get. <br>
             && I mean <em>REAL</em> magic! Technology and the possibilities it provides is somewhat enchanting.<br>
             The never ending carousel of knowledge to be acquired by a student like myself is quite the privilege!
