--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>&#9055; Jasmin Marie Christie</title>
+  <title> ⚡; Jasmin Marie Christie</title>
 </head>
 
 <body>
@@ -37,6 +37,21 @@
       <br>
     </ul>
     <hr>
+    <h3>Work experience</h3>
+    <table cellspacing="15">
+      <tr>
+        <td>2010-2012</td>
+        <td>Freelance Design <br>and Development</td>
+      </tr>
+      <tr>
+        <td>2012-2015</td>
+        <td>Sears</td>
+      </tr>
+      <tr>
+        <td>2015-2021</td>
+        <td>JC Computer and <br>Technology Solutions</td>
+      </tr>
+    </table>
     <h3>Skillset</h3>
     <table>
       <tr>
