--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title> ⚡; Jasmin Marie Christie</title>
+  <title> ⚡ Jasmin Marie Christie</title>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
     <p>
     <ul>
       <li><a href="https://www.camarillohigh.us/">Camarillo Adolfo High School</a></li>
-      <li>Oxnard College</li>
+      <li><a href="https://www.oxnardcollege.edu/">Oxnard College</a></li>
       <li><a href="google.com">Devry University</a></li>
       <br>
     </ul>
@@ -41,7 +41,7 @@
     <table cellspacing="15">
       <tr>
         <td>2010-2012</td>
-        <td>Freelance Design <br>and Development</td>
+        <td>Freelance, Design <br>and Development</td>
       </tr>
       <tr>
         <td>2012-2015</td>
