--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <p>
             Born and raised in sunny Southern California, I found myself at a young age always fascinated<br>
             with technology. The endless possibilities proposed to me by it seemed limitless, as time <br>
-            advanced and i found that to be true. The ability to create art, function, movement <br>
+            advanced i found that to be incredibly true. The ability to create art, function, movement <br>
             and even forms of amusement from pretty much nothing was as close to magic I belived I'd ever get. <br>
             && I mean <em>REAL</em> magic! Technology and the possibilities it provides is somewhat enchanting.<br>
             The never ending carousel of knowledge to be acquired by a student like myself is quite the privilege!
