--- a/hobbies.html
+++ b/hobbies.html
@@ -9,7 +9,7 @@
     <ol>
       <li>Building Gaming Pc's</li>
       <li>Modifying and repairing Retro Gaming Consoles</li>
-      <li><a href="https://www.instagram.com/jasminmariechristie/">Repair and upgrading Macintosh units</a></li>
+      <li><a href="https://www.facebook.com/KiingdomTech-102266124574242/">Repairing and upgrading Macintosh units</a></li>
     </ol>
 
   </body>
