--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <body>
     <h1>My contact details</h1>
     <p>INSTAGRAM <br>
-      @jasminmariechristie
+      @jazsus
       </p>
       <hr>
       <form class="" action="mailto:jaykole77@gmail.com" method="post" enctype="text/plain">
